Tweak global search from for mobile - to prevent button from wrapping on small screens

--- a/docroot/sites/all/themes/site_frontend/css/site-frontend.styles.css
+++ b/docroot/sites/all/themes/site_frontend/css/site-frontend.styles.css
@@ -3907,7 +3907,7 @@ span.copyright {
     border-radius: 10px;
   }
   .global-search input.form-text {
-    width: 90%;
+    width: 80%;
   }
 }
 .header-wrapper {
