--- a/docroot/sites/all/themes/site_frontend/sass/components/_global_search.scss
+++ b/docroot/sites/all/themes/site_frontend/sass/components/_global_search.scss
@@ -59,7 +59,7 @@
 		-ms-border-radius: 10px;
 		border-radius: 10px;
 		input.form-text {
-			width: 90%;
+			width: 80%;
 		}
 	}
 }
